--- a/test-output/old/Functional Suite/Validate Title.properties
+++ b/test-output/old/Functional Suite/Validate Title.properties
@@ -1,1 +1,1 @@
-[SuiteResult context=Login Test][SuiteResult context=Validate Title]
+[SuiteResult context=Login Test][SuiteResult context=Validate Title][SuiteResult context=failing Testcase]
